<resources>
    <string name="app_name">FITRACKER</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_in_with_google_button_text">Sign in with Google</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="app_logo_description">App logo</string>
    <string name="personal_trainer_question">Personal trainer?</string>
    <string name="register_business_user_text">Sign up as a business user</string>
    <string name="not_trainer_text">Not a personal trainer?</string>
    <string name="register_regular_user_text">Sign up as a regular user</string>
    <string name="mobile_text">Mobile phone</string>
    <string name="measurements_title">Measurements</string>
    <string name="user_avatar">User avatar</string>
    <string name="weight_hint">Weight(kg)</string>
    <string name="fat_hint">Body fat(%)</string>
    <string name="chest_hint">Chest(cm)</string>
    <string name="waist_hint">Waist(cm)</string>
    <string name="hips_hint">Hips(cm)</string>
    <string name="biceps_hint">Biceps(cm)</string>
    <string name="logout">Logout</string>
    <string name="nutrition_title">Nutrition menu</string>
    <string name="workouts_title">Workout plans</string>
    <string name="customers_title">My customers</string>
    <string name="schedule_title">Schedule</string>
    <string name="home_title">Home</string>
    <string name="username_default">Username</string>
    <string name="sign_in_progress">LOGGING IN…</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_failed_internet">Authentication failed, please check your internet connection and try again.</string>
    <string name="username_hint">Name</string>
    <string name="database_write_error">Error on writing to database, check your internet connection and try again</string>
    <string name="database_read_error">Error occurred when trying to read from database, check your internet connection and try again</string>
    <string name="workout_name_field_hint">Workout Name</string>
    <string name="empty_workout_list_hint">There are no exercises added yet!\nUse + button to add first exercise.</string>
    <string name="empty_workouts_list_hint">There are no workouts added yet!\nUse + button to add first workout.</string>
    <string name="empty_customer_workouts_list_hint">The customer has no workouts yet\nUse + button to add first workout.</string>
    <string name="empty_dish_list_hint">There are no options added yet!\nUse + button to add first dish option.</string>
    <string name="empty_meal_list_hint">There are no dishes added yet!\nUse + button to add first dish.</string>
    <string name="empty_measurements_list_hint">There are no measurements added yet!\nUse + button to add first measurement.</string>
    <string name="empty_customer_feed_list_hint">The customer has no data yet.</string>
    <string name="empty_nutrition_list_hint">There are no meals in your nutrition menu yet!\nUse + button to add first meal.</string>
    <string name="empty_customer_nutrition_list_hint">There customer hadn\'t added any meals yet!\nUse + button to add first meal.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration_hint">Duration</string>
    <string name="speed_hint">Speed</string>
    <string name="intensity_hint">Intensity</string>
    <string name="name_hint">Name</string>
    <string name="sets_hint">Sets</string>
    <string name="repetitions_hint">Repetitions</string>
    <string name="rest_between_sets_hint">Rest between sets</string>
    <string name="notes_hint">Notes</string>
    <string name="plus_sign_hint">+</string>
    <string name="aerobic_hint">Aerobic</string>
    <string name="description_hint">Description</string>
    <string name="save">Save</string>
    <string name="add_meal_title">Add meal</string>
    <string name="add_new_dish">Add new dish</string>
    <string name="search_hint">Search users</string>
    <string name="search_users_tab">users</string>
    <string name="search_trainers_tab">trainers</string>
    <string name="provide_name">Please provide a name for menu</string>
    <string name="warning">Warning</string>
    <string name="usaved_data_will_be_lost">All unsaved data will be lost, continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name_shouldnt_be_empty">Name should not be empty</string>
    <string name="add_dish">Add new option</string>
    <string name="edit_meal">Edit the meal</string>
    <string name="edit_dish">Edit the dish</string>
    <string name="share">Share</string>
    <string name="history">History</string>
    <string name="added_success">Added successfully!</string>
    <string name="add_failure">Failed to add!</string>
    <string name="add">Add</string>
    <string name="body_fat_hint">Body fat</string>
    <string name="add_exercise">Add exercise</string>
    <string name="duration_">Duration:</string>
    <string name="speed_">Speed:</string>
    <string name="intensity_">Intensity:</string>
    <string name="notes_">Notes:</string>
    <string name="done_image">Done Image</string>
    <string name="finished_at">Finished at:</string>
    <string name="recent_workout_icon">recent_workout_icon</string>
    <string name="rest_">Rest:</string>
    <string name="repetitions_">Repetitions:</string>
    <string name="sets_">Sets:</string>
    <string name="weight_">Weight:</string>
    <string name="add_dish_option">Add dish option</string>
    <string name="add_dish_c">Add dish</string>
    <string name="last_workouts">Last workouts</string>
    <string name="add_measure">Add measure</string>
    <string name="add_meal">Add meal</string>
    <string name="add_workout">Add workout</string>
    <string name="start_workout">Start workout</string>
    <string name="well_done">Well DONE!</string>
    <string name="discard">Discard</string>
    <string name="rating_sad">Rating Sad</string>
    <string name="rating_neutral">Rating Neutral</string>
    <string name="rating_happy">Rating Happy</string>
    <string name="rating_cool">Rating Cool</string>
    <string name="how_did_it_go">How did it go?</string>
    <string name="time_elapsed">Time elapsed:</string>
    <string name="how_did_you_feel">How did you feel?</string>
    <string name="name">Name</string>
    <string name="count">Quantity</string>
    <string name="dot">•</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="credits_header">Credits</string>
    <string name="doubleDot">:</string>
    <string name="add_customer">Add client</string>
    <string name="empty_customers_list_hint">There are no customers added yet!\nUse + button to add your first customer.</string>
    <string name="empty_pending_requests_list_hint">There are no pending requests.</string>
    <string name="channel_name">Notifications</string>
    <string name="channel_description">channel description - edit on @strings</string>
    <string name="remove_trainee">Remove trainee</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_appointment">Do you want to cancel the appointment?</string>
    <string name="cancel_appointment_title">Cancel Appointment</string>
    <string name="dialog_remove_trainee_message">Do you want to remove this trainee?</string>
    <string name="dialog_remove_trainee_title">Remove trainee</string>
    <string name="business_home_placeholder">No upcoming meetings or notifications</string>
    <string name="upcoming_trainings">Upcoming Trainings:</string>
    <string name="notifications">Notifications:</string>
    <string name="information">Information</string>
    <string name="already_has_trainer">The user already has a trainer</string>
    <string name="you_already_have_trainer">You already have a trainer</string>
    <string name="delete_trainee">Delete trainee</string>
    <string name="delete_your_trainer">Delete trainer</string>
    <string name="add_as_trainer">Add as trainer</string>
    <string name="add_as_trainee">Add as trainee</string>
    <string name="cancel_request">Cancel request</string>
    <string name="notes">Notes</string>
    <string name="appointments">Appointments</string>
    <string name="pick_photo">Pick photo</string>
    <string name="current_photo">Current Photo</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="exercise_name">Exercise name</string>
    <string name="muscle_category">Muscle Category</string>
    <string name="muscle">Muscle</string>
    <string name="exercise_gif">exercise_gif</string>
</resources>
