<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
     >
    <item
        android:id="@+id/measurements_history"
        android:title="@string/history"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/user_menu_settings_ac"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="Settings" />

    <item
        android:id="@+id/user_menu_logout_ac"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/logout" />

    <item
        android:id="@+id/search_from_personal"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/measurements_add"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="always" />
</menu>