<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_workouts"
        android:enabled="true"
        android:icon="@drawable/ic_action_workouts"
        android:title="@string/workouts_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_nutrition"
        android:enabled="true"
        android:icon="@drawable/ic_action_nutrition"
        android:title="@string/nutrition_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_measurements"
        android:enabled="true"
        android:icon="@drawable/ic_action_measurement"
        android:title="@string/measurements_title"
        app:showAsAction="ifRoom" />
</menu>