<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpBusinessFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="421dp"
        android:layout_height="204dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_transparent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText5"
        app:layout_constraintStart_toStartOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:text="@string/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_trainer_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="0.956" />

    <Button
        android:id="@+id/button7"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:text="@string/register_regular_user_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/mobile_text"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/editText6"
        app:layout_constraintStart_toStartOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />
</androidx.constraintlayout.widget.ConstraintLayout>