<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUpFragment">

    <EditText
        android:id="@+id/sign_up_fragment_email"
        style="@style/login_input_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_fragment_name"
        app:layout_constraintStart_toStartOf="@+id/sign_up_fragment_name"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_fragment_name"/>


    <EditText
        android:id="@+id/sign_up_fragment_name"
        style="@style/login_input_field"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <EditText
        android:id="@+id/sign_up_fragment_pass"
        style="@style/login_input_field"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_fragment_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_up_fragment_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_fragment_email" />

    <TextView
        android:id="@+id/sign_up_fragment_trainer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_trainer_question"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_fragment_trainer_sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_fragment_sign_up_button"
        app:layout_constraintVertical_bias="0.975" />

    <Button
        android:id="@+id/sign_up_fragment_trainer_sign_up_button"
        android:layout_marginBottom="16dp"
        android:text="@string/register_business_user_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/log_screen_btn"/>

    <Button
        android:id="@+id/sign_up_fragment_sign_up_button"
        style="@style/log_screen_btn"
        android:layout_marginTop="16dp"
        android:shadowColor="#007A4545"
        android:text="@string/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_fragment_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>
