<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignInFragment">

    <EditText
        android:id="@+id/login_fragment_email"
        style="@style/login_input_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_fragment_pass"
        style="@style/login_input_field"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_fragment_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_fragment_email"
        app:layout_constraintTop_toBottomOf="@+id/login_fragment_email" />

    <Button
        android:id="@+id/login_fragment_sign_in_button"
        style="@style/log_screen_btn"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_fragment_pass" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_fragment_sign_in_with_google"
        style="@style/log_screen_btn"
        android:layout_marginTop="16dp"
        android:shadowColor="#007A4545"
        android:text="@string/sign_in_with_google_button_text"
        app:layout_constraintEnd_toEndOf="@+id/login_fragment_sign_in_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_fragment_sign_in_button"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_sign_in_button" />

    <TextView
        android:id="@+id/login_fragment_no_acc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/login_fragment_sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_fragment_sign_in_with_google"
        app:layout_constraintVertical_bias="0.973" />

    <Button
        android:id="@+id/login_fragment_sign_up_button"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/log_screen_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>